# sqlrepl

./: .gitignore  README.md  mise.toml  pyproject.toml  requirements.txt  sqlrepl.py  zmq_example.py
sqlrepl/: __init__.py  bigquery.py  completions.py  config.py  constants.py  formatting.py  keybindings.py  osc_clipboard.py  repl.py  sql_keywords.py  status_bar.py  style.py  ui.py
