[project]
name = "sqlrepl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage>=2.33.1",
    "numpy",
    "pandas",
    "prompt-toolkit",
    "ptpython",
    "pyperclip",
    "rich",
    "sqlfluff",
    "sqlglot",
    "tqdm",
]

[project.scripts]
sqlrepl = "sqlrepl:cli"

[tool.uv]
package = true

[tool.black]
line-length = 100
